# constellaration_challenge

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  2506.19583v1.txt  AGENTS.md  CLAUDE.md  CONSTELX_ANALYSIS_REPORT.md  LICENSE  README.md  TODO.md  mypy.ini  pyproject.toml
.claude/: .mcp.json
.mpl_cache/: fontlist-v390.json
docs/: AGENTS_LLM.md  ALPHA_FOLD_INSPIRED.md  ARCHITECTURE.md  FURBO.md  GUIDELINE.md  NEW_STRATEGY.md  PR_SUMMARY.md  ROADMAP.md  SEEDS_PRIOR.md  START.md  STRATEGY.md  ci.md  new-info.md
examples/: data_ingestion.md  pcfm_ar_band.json  pcfm_clearance.json  pcfm_edge_iota.json  pcfm_norm.json  pcfm_product.json  pcfm_qs_band.json  pcfm_ratio.json
models/: seeds_prior_hf_flow.joblib  seeds_prior_hf_gmm.joblib
papers/: 2401.08390.md  2412.01786v2.md  2502.11657.md  2503.18617.md  2506.14619.md  2507.06357.md  2507.12681v1.md  2508.01834.md  2508.20878.md  2509.02617.md
tests/: conftest.py  test_agent_budget_resume.py  test_agent_init_seeds.py  test_agent_metrics_columns.py  test_agent_metrics_nfp_column.py  test_agent_mf_integration.py  test_agent_novelty_skip.py  test_agent_seed_prior.py  test_agent_small.py  test_agent_surrogate_screen.py  test_booz_proxy.py  test_boundary_fourier.py  test_boundary_param.py  test_cli.py  test_cli_ablate.py  test_cli_ablate_spec.py  test_cli_agent_eci_linear.py  test_cli_agent_nfp_list.py  test_cli_agent_pcfm.py  test_cli_agent_pcfm_ratio.py  test_cli_agent_prior.py  test_cli_data.py  test_cli_data_hf_smoke.py  test_cli_eval.py  test_cli_gating_problem_required.py  test_cli_opt_pareto.py  (+30 more)
(+109 files in other folders)
