[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constelx"
version = "0.0.1"
description = "Starter repo for the ConStellaration fusion challenge"
authors = [{name="Your Team", email="team@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "datasets>=2.20",
  "rich>=13.7",
  "typer>=0.12",
  "pydantic>=2.7",
  "torch>=2.2; platform_system!='Darwin' or platform_machine!='arm64'",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "packaging>=24.0",
  "constellaration>=0.1.6",   # evaluator + VMEC++ interfaces
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.6"]
bo = ["botorch>=0.12", "gpytorch>=1.13"]
evolution = ["cma>=3.3"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
constelx = "constelx.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
